Add Kristi to organizer list

--- a/web/pages/about.html
+++ b/web/pages/about.html
@@ -30,19 +30,18 @@ We are centered in Utrecht, the Netherlands.</p>
 {% endblock %}
 
 {% block main %}
-<h3>Organisers</h3>
 
 <div class="organizers">
-  <div class="organizer">
+  <div class="organizer" id="alma">
     <img src="/img/organisation/alma.jpg" alt="Photograph of Alma Liezenga">
     <h4>Alma Liezenga</h4>
-    <p class="small">Alma is a master's student of Engineering & Policy Analysis at
+    <p class="small">Alma is a master's student of Engineering &amp; Policy Analysis at
     TU Delft. She did her bachelor in information sciences with a
     minor in AI in Utrecht, where she wrote her thesis on automated
     analysis of breast MRI. She is passionate about imaging, AI and
     public policy.</p>
   </div>
-  <div class="organizer">
+  <div class="organizer" id="rob">
     <img src="/img/organisation/rob.jpg" alt="Photograph of Rob de Wit">
     <h4>Rob de Wit</h4>
     <p class="small">Rob likes using data as a tool to explain the world and improve upon it.
@@ -50,7 +49,7 @@ We are centered in Utrecht, the Netherlands.</p>
     <a href="https://bol.com" target="_blank">bol.com</a> where he gets to combat crooks. His
     favourite colour is <span class="rob-color">#F72585</span>.</p>
   </div>
-  <div class="organizer">
+  <div class="organizer" id="laurens">
     <img src="/img/organisation/laurens.jpg" alt="Photograph of Laurens Duijvesteijn">
     <h4>Laurens Duijvesteijn</h4>
     <p class="small">Laurens is obsessed with developer tools/experience, and enjoys
@@ -59,13 +58,21 @@ We are centered in Utrecht, the Netherlands.</p>
       <a href="https://iterative.ai/" target="_blank">Iterative</a> build tools for ML /
       AI projects.</p>
   </div>
-  <div class="organizer">
+  <div class="organizer" id="bianca">
     <img src="/img/organisation/bianca.jpg" alt="Photograph of Bianca Beerepoot">
     <h4>Bianca Beerepoot</h4>
     <p class="small">Bianca has always been passionate about everything that
     has to do with data. Currently, she works at First Technology as a
     developer, where she analyzes and optimizes processes for clients. In her
     eyes, a project is only a success when the user experience is perfect.</p>
+  </div>
+  <div class="organizer" id="kristi">
+    <img src="/img/organisation/kristi.jpg" alt="Photograph of Kristi Bergman">
+    <h4>Kristi Bergman</h4>
+    <p class="small">Kristi loves to get creative with data. She recently
+    obtained her master's degree in Human Computer Interaction. From September
+    onwards, she will be teaching a first year course in the bachelor
+    Information Sciences at the University of Utrecht.</p>
   </div>
 </div>
 {% endblock %}
