Add Linkedin icon to homepage

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -50,8 +50,13 @@ learn more about our field.</p>
 <p>
   Join us on
   <a class="icon-link" href="https://www.meetup.com/onehot/" target="_blank">
-    <img class="icon" src="/img/icons/meetup.svg">
+    <img class="icon" id="meetup" src="/img/icons/meetup.svg">
     <span class="text">Meetup</span>
+  </a>
+  and on
+  <a class="icon-link" href="https://www.linkedin.com/company/onehot/" target="_blank">
+    <img class="icon" id="linkedin" src="/img/icons/linkedin.svg">
+    <span class="text">Linkedin</span>
   </a>!
 </p>
 {% endblock %}
