--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -21,7 +21,7 @@ learn more about our field.</p>
 <h2>Events</h2>
 <div class="event-list">
   {% for event in events %}
-  <div class="event">
+  <div class="event {{ event.status }}">
       <h4 class="title"><a href="{{ event.url }}">Meetup: {{ event.title }}</a></h4>
       <h4 class="date">{{ event.date }}</h4>
       <div class="description">
