--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -21,7 +21,7 @@ learn more about our field.</p>
 <h2>Events</h2>
 <div class="event-list">
   {% for event in events %}
-  <div class="event {{ event.status }}">
+  <div class="event">
       <h4 class="title"><a href="{{ event.url }}">Meetup: {{ event.title }}</a></h4>
       <h4 class="date">{{ event.date }}</h4>
       <div class="description">
@@ -38,6 +38,7 @@ learn more about our field.</p>
         <span class="start_time">{{ event.start_time }}</span>
         <span class="location">{{ event.location.text }}</span>
         <span class="rsvp"><a href="{{ event.url }}">Details & RSVP</a></span>
+        <span class="status {{ event.status }}">{{ event.status }}</span>
       </div>
   </div>
   {% else %}
