Add Youtube to footer

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -60,4 +60,11 @@ learn more about our field.</p>
     <span class="text">Linkedin</span>
   </a>!
 </p>
+<p>
+  View recordings from previous talks on
+  <a class="icon-link" href="https://www.youtube.com/channel/UC2wnyfjeow1Vvh7bcYBdRQg" target="_blank">
+    <img class="icon" id="youtube" src="/img/icons/youtube.svg">
+    <span class="text">Youtube</span>
+  </a>!
+</p>
 {% endblock %}
