Ensure consistent images on about page

--- a/web/pages/about.html
+++ b/web/pages/about.html
@@ -33,7 +33,7 @@ We are centered in Utrecht, the Netherlands.</p>
 
 <div class="organizers">
   <div class="organizer" id="alma">
-    <img src="/img/organisation/alma.jpg" alt="Photograph of Alma Liezenga">
+    <img src="/img/organisation/alma_450x450.jpg" alt="Photograph of Alma Liezenga">
     <h4>Alma Liezenga</h4>
     <p class="small">Alma is a master's student of Engineering &amp; Policy Analysis at
     TU Delft. She did her bachelor in information sciences with a
@@ -42,7 +42,7 @@ We are centered in Utrecht, the Netherlands.</p>
     public policy.</p>
   </div>
   <div class="organizer" id="rob">
-    <img src="/img/organisation/rob.jpg" alt="Photograph of Rob de Wit">
+    <img src="/img/organisation/rob_450x450.jpg" alt="Photograph of Rob de Wit">
     <h4>Rob de Wit</h4>
     <p class="small">Rob likes using data as a tool to explain the world and improve upon it.
     He currently works as a data analyst in the fraud and risk team at
@@ -50,7 +50,7 @@ We are centered in Utrecht, the Netherlands.</p>
     favourite colour is <span class="rob-color">#F72585</span>.</p>
   </div>
   <div class="organizer" id="laurens">
-    <img src="/img/organisation/laurens.jpg" alt="Photograph of Laurens Duijvesteijn">
+    <img src="/img/organisation/laurens_450x450.jpg" alt="Photograph of Laurens Duijvesteijn">
     <h4>Laurens Duijvesteijn</h4>
     <p class="small">Laurens is obsessed with developer tools/experience, and enjoys
       scaling infrastructure. He used to lead the DevOps team at
@@ -59,7 +59,7 @@ We are centered in Utrecht, the Netherlands.</p>
       AI projects.</p>
   </div>
   <div class="organizer" id="bianca">
-    <img src="/img/organisation/bianca.jpg" alt="Photograph of Bianca Beerepoot">
+    <img src="/img/organisation/bianca_450x450.jpg" alt="Photograph of Bianca Beerepoot">
     <h4>Bianca Beerepoot</h4>
     <p class="small">Bianca has always been passionate about everything that
     has to do with data. Currently, she works at First Technology as a
@@ -67,7 +67,7 @@ We are centered in Utrecht, the Netherlands.</p>
     eyes, a project is only a success when the user experience is perfect.</p>
   </div>
   <div class="organizer" id="kristi">
-    <img src="/img/organisation/kristi.jpg" alt="Photograph of Kristi Bergman">
+    <img src="/img/organisation/kristi_450x450.jpg" alt="Photograph of Kristi Bergman">
     <h4>Kristi Bergman</h4>
     <p class="small">Kristi loves to get creative with data. She recently
     obtained her master's degree in Human Computer Interaction. From September
