Refactor the templates
I had to remove the default `max-width` on everything in the `main`
block to properly fix the width of the organization page. (That fix
will happen in a subsequent commit.)

Changes:

 - Content in a template needs to be wrapped in a `<div
   class="container">` to get `max-width` applied. It's a little more
   verbose, but we need the extra control.
 - I removed the separate `header` block from the default layout
   template as it wasn't really needed. We can just use the `main` block
   for content.

--- a/web/pages/about.html
+++ b/web/pages/about.html
@@ -3,33 +3,32 @@ url: "/about"
 ===
 {% extends "layout.html" %}
 
-{% block header %}
-<h1>About</h1>
-<p>Onehot is a community for people passionate about data science.
-We are centered in Utrecht, the Netherlands.</p>
-
-<p>We want to build an inclusive community where everyone is
-  welcome to share and learn. Whether you are a practicioner or student, analyst
-  or engineer; please feel free to join us in this endeavour!
-</p>
-
-<p>Currently we are organising a series of five meet-ups. Our
-  dream is to organise a full-fledged conference one day.
-</p>
-
-<p>The name of our community is a reference to
-<a href="https://en.wikipedia.org/wiki/One-hot" target="_blank">one-hot encoding</a>.</p>
-
-<h3>Get in touch</h3>
-<p>Please reach out to us if you have questions or suggestions,
-  would like to speak at one of our events, or are willing to sponsor us. Same
-  goes if you just want to say hi: we love hearing from you!</p>
-
-<p><a href="mailto:organisation@onehot.nl">organisation@onehot.nl
-</a></p>
-{% endblock %}
-
 {% block main %}
+<div class="container">
+  <h1>About</h1>
+  <p>Onehot is a community for people passionate about data science.
+  We are centered in Utrecht, the Netherlands.</p>
+
+  <p>We want to build an inclusive community where everyone is
+    welcome to share and learn. Whether you are a practicioner or student, analyst
+    or engineer; please feel free to join us in this endeavour!
+  </p>
+
+  <p>Currently we are organising a series of five meet-ups. Our
+    dream is to organise a full-fledged conference one day.
+  </p>
+
+  <p>The name of our community is a reference to
+  <a href="https://en.wikipedia.org/wiki/One-hot" target="_blank">one-hot encoding</a>.</p>
+
+  <h3>Get in touch</h3>
+  <p>Please reach out to us if you have questions or suggestions,
+    would like to speak at one of our events, or are willing to sponsor us. Same
+    goes if you just want to say hi: we love hearing from you!</p>
+
+  <p><a href="mailto:organisation@onehot.nl">organisation@onehot.nl
+  </a></p>
+</div>
 
 <div class="organizers">
   <div class="organizer" id="alma">
