--- a/web/404.html
+++ b/web/404.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
-{% block header %}
-<h1>404</h1>
-<p>Page not found.</p>
+{% block main %}
+<div class="container">
+  <h1>404</h1>
+  <p>Page not found.</p>
+</div>
 {% endblock %}
