--- a/web/pages/code-of-conduct.html
+++ b/web/pages/code-of-conduct.html
@@ -3,36 +3,38 @@ url: "/code-of-conduct"
 ===
 {% extends "layout.html" %}
 
-{% block header %}
-<h1>Code of Conduct</h1>
+{% block main %}
+<div class="container">
+  <h1>Code of Conduct</h1>
 
-<p>We want to be an inclusive community where everyone can feel
-  safe and welcome. That is why we want everyone to respect a set of ground
-  rules, both online and during events organised by Onehot.
-</p>
+  <p>We want to be an inclusive community where everyone can feel
+    safe and welcome. That is why we want everyone to respect a set of ground
+    rules, both online and during events organised by Onehot.
+  </p>
 
-<p>By taking part in our community, you agree to the following
-  rules:</p>
+  <p>By taking part in our community, you agree to the following
+    rules:</p>
 
-<ol>
-  <li>We expect everyone to be respectful to each other. Be welcoming and
-    friendly, because we are here to share and learn.</li>
-  <li>We absolutely do not allow discrimination or harassment on the
-  basis of gender, race, ethnicity, sexual orientation, appearance,
-  (dis)ability, religion, language, age, tabs vs. spaces, database of choice,
-  or anything else for that matter.</li>
-  <li>We do not tolerate sexual language and imagery. Our community and events
-  are not an appropriate outlet for that.</li>
-  <li>We do not allow overly aggressive marketing or recruiting from anyone.</li>
-  <li>We want to have a generally "semi-professional-ish" atmosphere. Feel free
-    to joke and have a good time, but please stay away from dirty or off-colour.
-</ol>
+  <ol>
+    <li>We expect everyone to be respectful to each other. Be welcoming and
+      friendly, because we are here to share and learn.</li>
+    <li>We absolutely do not allow discrimination or harassment on the
+    basis of gender, race, ethnicity, sexual orientation, appearance,
+    (dis)ability, religion, language, age, tabs vs. spaces, database of choice,
+    or anything else for that matter.</li>
+    <li>We do not tolerate sexual language and imagery. Our community and events
+    are not an appropriate outlet for that.</li>
+    <li>We do not allow overly aggressive marketing or recruiting from anyone.</li>
+    <li>We want to have a generally "semi-professional-ish" atmosphere. Feel free
+      to joke and have a good time, but please stay away from dirty or off-colour.
+  </ol>
 
-<p>Failure to comply with these rules will result in your removal
-  at the discretion of the organisation.</p>
+  <p>Failure to comply with these rules will result in your removal
+    at the discretion of the organisation.</p>
 
-<p>If you see or experience any issues at a Onehot
-event, please let us know and we will take action right away. You can
-email us at <a href="mailto:organisation@onehot.nl">organisation@onehot.nl</a>
-or talk to one of our organisers at the event.</p>
+  <p>If you see or experience any issues at a Onehot
+  event, please let us know and we will take action right away. You can
+  email us at <a href="mailto:organisation@onehot.nl">organisation@onehot.nl</a>
+  or talk to one of our organisers at the event.</p>
+</div>
 {% endblock %}
