Hide `& RSVP` for past events

--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -36,7 +36,7 @@ url: "/"
         <div class="details">
           <span class="start_time">{{ event.start_time }}</span>
           <span class="location">{{ event.location.text }}</span>
-          <span class="rsvp"><a href="{{ event.url }}">Details & RSVP</a></span>
+          <span class="rsvp"><a href="{{ event.url }}">Details {% if event.status == "upcoming" %}& RSVP{% endif %}</a></span>
           <span class="status {{ event.status }}">{{ event.status.capitalize() }}</span>
         </div>
     </div>
