Add title/description meta for events and pages

--- a/web/pages/about.html
+++ b/web/pages/about.html
@@ -3,6 +3,8 @@ url: "/about"
 ===
 {% extends "layout.html" %}
 
+{% block title %}About &amp; organizers{%endblock %}
+
 {% block main %}
 <div class="container">
   <h1>About</h1>
