--- a/web/pages/code-of-conduct.html
+++ b/web/pages/code-of-conduct.html
@@ -3,14 +3,18 @@ url: "/code-of-conduct"
 ===
 {% extends "layout.html" %}
 
+{% block title %}Code of conduct{% endblock %}
+{% block description %}
+    We want to be an inclusive community where everyone can feel
+    safe and welcome. That is why we want everyone to respect a set of ground
+    rules, both online and during events organised by Onehot.
+{% endblock %}
+
 {% block main %}
 <div class="container">
   <h1>Code of Conduct</h1>
 
-  <p>We want to be an inclusive community where everyone can feel
-    safe and welcome. That is why we want everyone to respect a set of ground
-    rules, both online and during events organised by Onehot.
-  </p>
+  <p>{{ self.description() }}</p>
 
   <p>By taking part in our community, you agree to the following
     rules:</p>
